Primer homework del proyecto

--- a/front/index.html
+++ b/front/index.html
@@ -3,11 +3,52 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="./styles/reset.css" />
+    <link rel="stylesheet" href="./styles/styles.css" />
+    <title>Proyecto Modulo 2</title>
   </head>
   <body>
-    <h1>Proyecto de M2</h1>
-
+    <header>
+      <div class="Logo">
+        <img class="img-logo" src="./assets/img/Logo.png" />
+        <h5 class="titulo-logo">Cinephile</h5>
+      </div>
+      <div class="menu">
+        <nav class="nav">
+          <ul class="paginas">
+            <li class="pag-1">
+              <a href="" class="texto-header">Sobre mi</a>
+            </li>
+            <li class="pag-2">
+              <a href="" class="texto-header">Historia del cine</a>
+            </li>
+          </ul>
+        </nav>
+        <img src="./assets/img/cuenta.png" alt="" srcset="" width="35px" />
+      </div>
+    </header>
+    <main>
+      <div class="container-bienvenida">
+        <div class="container-texto">
+          <h1 class="titulo-bienvenida">Bienvenidos a Cinephile</h1>
+        </div>
+      </div>
+      <section class="peliculas">
+        <h2 class="titulo">Peliculas</h2>
+        <div class="container-peliculas"></div>
+      </section>
+    </main>
+    <footer class="footer">
+      <div class="container-footer">
+        <div class="linea-1">
+          <h6 class="subtitulo">Politicas de privacidad</h6>
+          <h6 class="subtitulo">Terminos y condiciones</h6>
+        </div>
+        <div class="linea-2">
+          <h6 class="subtitulo">©2024 Cinephile. All rights reserved.</h6>
+        </div>
+      </div>
+    </footer>
     <script src="./scripts/tempData.js"></script>
     <script src="./scripts/index.js"></script>
   </body>
