Agrego nuevas paginas, y ahora traemos las peliculas de la API, esto es de la actividad M2 AJX

--- a/front/sobreMi.html
+++ b/front/sobreMi.html
@@ -18,7 +18,7 @@
         <nav class="nav">
           <ul class="paginas">
             <li class="pag-1">
-              <a href="./sobreMi.html" class="texto-header">Sobre mi</a>
+              <a href="" class="texto-header">Sobre mi</a>
             </li>
             <li class="pag-2">
               <a href="./historiaCine.html" class="texto-header"
@@ -36,10 +36,6 @@
           <h1 class="titulo-bienvenida">Bienvenidos a Cinephile</h1>
         </div>
       </div>
-      <section class="peliculas">
-        <h2 class="titulo">Peliculas</h2>
-        <div class="container-peliculas"></div>
-      </section>
     </main>
     <footer class="footer">
       <div class="container-footer">
