--- a/front/sobreMi.html
+++ b/front/sobreMi.html
@@ -5,6 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles/reset.css" />
     <link rel="stylesheet" href="./styles/styles.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+      integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+      crossorigin="anonymous"
+    ></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <title>Proyecto Modulo 2</title>
   </head>
@@ -35,6 +56,42 @@
         <div class="container-texto">
           <h1 class="titulo-bienvenida">Bienvenidos a Cinephile</h1>
         </div>
+      </div>
+      <div>
+        <p>
+          Tu destino definitivo para todo lorelacionado con el mundo del cine.
+          En Cinephile, nos apasiona compartir la magia del cine contigo,
+          ofreciéndote una amplia variedad de películas junto con información
+          detallada para que disfrutes al máximo de cada experiencia
+          cinematográfica.
+        </p>
+        <p>
+          En nuestra página, encontrarás una extensa colección de películas de
+          diversos géneros, desde clásicos atemporales hasta los últimos
+          estrenos de Hollywood. Nos enorgullece ofrecer una plataforma donde
+          los amantes del cine pueden explorar y descubrir nuevas obras
+          maestras, así como redescubrir viejos favoritos.
+        </p>
+        <p>
+          Nuestro objetivo en Cinephile es proporcionarte toda la información
+          que necesitas para tomar decisiones informadas sobre qué películas
+          ver. Desde la duración y la calificación hasta el director y el
+          elenco, te ofrecemos detalles completos sobre cada película para que
+          puedas elegir la opción perfecta según tus gustos y preferencias.
+        </p>
+
+        <p>
+          Ya sea que estés buscando una emocionante película de acción, una
+          conmovedora historia de amor o un intrigante thriller, estamos aquí
+          para ayudarte a encontrar exactamente lo que necesitas. En Cinephile,
+          creemos en la magia del cine para inspirar, entretener y conectarnos a
+          todos, y estamos emocionados de compartir esa pasión contigo.
+        </p>
+        <p>
+          Gracias por unirte a nosotros en esta emocionante aventura
+          cinematográfica. ¡Esperamos que disfrutes explorando nuestro sitio y
+          descubriendo todo lo que tenemos para ofrecer!
+        </p>
       </div>
     </main>
     <footer class="footer">
