--- a/front/historiaCine.html
+++ b/front/historiaCine.html
@@ -31,27 +31,52 @@
   </head>
   <body>
     <header>
-      <div class="Logo">
-        <img class="img-logo" src="./assets/img/Logo.png" />
-        <a href="./index.html" class="titulo-logo">Cinephile</a>
-      </div>
-      <div class="menu">
-        <nav class="nav">
-          <ul class="paginas">
-            <li class="pag-1">
-              <a href="./sobreMi.html" class="texto-header">Sobre mi</a>
-            </li>
-            <li class="pag-2">
-              <a href="./historiaCine.html" class="texto-header"
-                >Historia del cine</a
-              >
-            </li>
-          </ul>
-        </nav>
-        <img src="./assets/img/cuenta.png" alt="" srcset="" width="35px" />
-      </div>
+      <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid justify-content-between">
+          <div class="ms-3 align-content-center">
+            <img src="./assets/img/Logo.png" alt="" class="" />
+            <a
+              class="fs-5 fs-bold text-decoration-none text-dark m-1"
+              href="./index.html"
+              >Cinephile</a
+            >
+            <button
+              class="navbar-toggler"
+              type="button"
+              data-bs-toggle="collapse"
+              aria-expanded="false"
+              aria-label="Toggle navigation"
+            >
+              <span class="navbar-toggler-icon"></span>
+            </button>
+          </div>
+          <div
+            class="collapse navbar-collapse justify-content-end me-3"
+            id="navbarNavDropdown"
+          >
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a
+                  class="nav-link fs-5"
+                  aria-current="page"
+                  href="./sobreMi.html"
+                  >Sobre Nosotros</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link fs-5" href="./historiaCine.html"
+                  >Historia del cine</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link fs-5" href="#">Contactanos</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
     </header>
-    <main>
+    <main class="d-flex justify-content-center flex-column align-items-center">
       <div
         id="carouselExampleSlidesOnly"
         class="carousel slide"
@@ -118,14 +143,22 @@
         </p>
       </div>
     </main>
-    <footer class="footer">
-      <div class="container-footer">
-        <div class="linea-1">
-          <h6 class="subtitulo">Politicas de privacidad</h6>
-          <h6 class="subtitulo">Terminos y condiciones</h6>
+    <footer class="my-4">
+      <div class="container-fluid">
+        <div
+          class="container-fluid d-flex justify-content-around text-decoration-none"
+        >
+          <a href="" class="text-warning text-decoration-none fs-6"
+            >Politicas de privacidad</a
+          >
+          <a href="" class="text-warning text-decoration-none fs-6"
+            >Terminos y condiciones</a
+          >
         </div>
-        <div class="linea-2">
-          <h6 class="subtitulo">©2024 Cinephile. All rights reserved.</h6>
+        <div class="container-fluid d-flex justify-content-center">
+          <a href="#" class="text-warning text-decoration-none fs-6"
+            >©2024 Cinephile. All rights reserved.</a
+          >
         </div>
       </div>
     </footer>
