--- a/front/sobreMi.html
+++ b/front/sobreMi.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles/reset.css" />
-    <link rel="stylesheet" href="./styles/styles.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <!-- <link rel="stylesheet" href="./styles/styles.css" /> -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
@@ -31,33 +31,62 @@
   </head>
   <body>
     <header>
-      <div class="Logo">
-        <img class="img-logo" src="./assets/img/Logo.png" />
-        <a href="./index.html" class="titulo-logo">Cinephile</a>
-      </div>
-      <div class="menu">
-        <nav class="nav">
-          <ul class="paginas">
-            <li class="pag-1">
-              <a href="" class="texto-header">Sobre mi</a>
-            </li>
-            <li class="pag-2">
-              <a href="./historiaCine.html" class="texto-header"
-                >Historia del cine</a
-              >
-            </li>
-          </ul>
-        </nav>
-        <img src="./assets/img/cuenta.png" alt="" srcset="" width="35px" />
-      </div>
+      <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid justify-content-between">
+          <div class="ms-3 align-content-center">
+            <img src="./assets/img/Logo.png" alt="" class="" />
+            <a
+              class="fs-5 fs-bold text-decoration-none text-dark m-1"
+              href="./index.html"
+              >Cinephile</a
+            >
+            <button
+              class="navbar-toggler"
+              type="button"
+              data-bs-toggle="collapse"
+              aria-expanded="false"
+              aria-label="Toggle navigation"
+            >
+              <span class="navbar-toggler-icon"></span>
+            </button>
+          </div>
+          <div
+            class="collapse navbar-collapse justify-content-end me-3"
+            id="navbarNavDropdown"
+          >
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a
+                  class="nav-link fs-5"
+                  aria-current="page"
+                  href="./sobreMi.html"
+                  >Sobre Nosotros</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link fs-5" href="./historiaCine.html"
+                  >Historia del cine</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link fs-5" href="#">Contactanos</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
     </header>
-    <main>
-      <div class="container-bienvenida">
+    <main
+      class="d-flex justify-content-center align-items-center flex-column p-5"
+    >
+      <div
+        class="container-bienvenida d-flex justify-content-center align-items-center flex-column"
+      >
         <div class="container-texto">
           <h1 class="titulo-bienvenida">Bienvenidos a Cinephile</h1>
         </div>
       </div>
-      <div>
+      <div class="d-flex justify-content-center flex-column p-5">
         <p>
           Tu destino definitivo para todo lorelacionado con el mundo del cine.
           En Cinephile, nos apasiona compartir la magia del cine contigo,
@@ -94,14 +123,22 @@
         </p>
       </div>
     </main>
-    <footer class="footer">
-      <div class="container-footer">
-        <div class="linea-1">
-          <h6 class="subtitulo">Politicas de privacidad</h6>
-          <h6 class="subtitulo">Terminos y condiciones</h6>
+    <footer class="my-4">
+      <div class="container-fluid">
+        <div
+          class="container-fluid d-flex justify-content-around text-decoration-none"
+        >
+          <a href="" class="text-warning text-decoration-none fs-6"
+            >Politicas de privacidad</a
+          >
+          <a href="" class="text-warning text-decoration-none fs-6"
+            >Terminos y condiciones</a
+          >
         </div>
-        <div class="linea-2">
-          <h6 class="subtitulo">©2024 Cinephile. All rights reserved.</h6>
+        <div class="container-fluid d-flex justify-content-center">
+          <a href="#" class="text-warning text-decoration-none fs-6"
+            >©2024 Cinephile. All rights reserved.</a
+          >
         </div>
       </div>
     </footer>
