Agrego handler para el boton enviar que solo verifica que si esten todos los datos, agreggo handler para el boton limpiar, y ya he creado el controlador para crear pelicula, con su servicio y endpoint

--- a/front/index.html
+++ b/front/index.html
@@ -44,17 +44,19 @@
                 <a
                   class="nav-link fs-5"
                   aria-current="page"
-                  href="./sobreMi.html"
+                  href="./pages/sobreMi.html"
                   >Sobre Nosotros</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link fs-5" href="./historiaCine.html"
+                <a class="nav-link fs-5" href="./pages/historiaCine.html"
                   >Historia del cine</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link fs-5" href="#">Contactanos</a>
+                <a class="nav-link fs-5" href="./pages/agregarPelicula.html"
+                  >Agrega Peliculas</a
+                >
               </li>
             </ul>
           </div>
@@ -88,7 +90,7 @@
         ></div>
       </div>
     </main>
-    <footer class="my-4">
+    <footer class="my-4 mb-0">
       <div class="container-fluid">
         <div
           class="container-fluid d-flex justify-content-around text-decoration-none"
