--- a/front/pages/historiaCine.html
+++ b/front/pages/historiaCine.html
@@ -3,41 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./styles/reset.css" />
-    <link rel="stylesheet" href="./styles/styles.css" />
+    <link rel="stylesheet" href="../styles/reset.css" />
+    <link rel="stylesheet" href="../styles/styles.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-      integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-      crossorigin="anonymous"
-    ></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <title>Proyecto Modulo 2</title>
   </head>
-  <body>
+  <body class="d-flex flex-column min-vh-100">
     <header>
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid justify-content-between">
           <div class="ms-3 align-content-center">
-            <img src="./assets/img/Logo.png" alt="" class="" />
+            <img src="../assets/img/Logo.png" alt="" class="" />
             <a
               class="fs-5 fs-bold text-decoration-none text-dark m-1"
-              href="./index.html"
+              href="../index.html"
               >Cinephile</a
             >
             <button
@@ -69,7 +54,9 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link fs-5" href="#">Contactanos</a>
+                <a class="nav-link fs-5" href="./agregarPelicula.html"
+                  >Agregar Pelicula</a
+                >
               </li>
             </ul>
           </div>
@@ -85,21 +72,21 @@
         <div class="carousel-inner imagen-cine">
           <div class="carousel-item active">
             <img
-              src="./assets/img/cine1.jpeg"
+              src="../assets/img/cine1.jpeg"
               alt="bienvenida"
               class="d-block img-thumbnail w-70"
             />
           </div>
           <div class="carousel-item">
             <img
-              src="./assets/img/cine2.jpeg"
+              src="../assets/img/cine2.jpeg"
               alt="sala"
               class="d-block img-thumbnail w-70"
             />
           </div>
           <div class="carousel-item">
             <img
-              src="./assets/img/cine3.jpeg"
+              src="../assets/img/cine3.jpeg"
               alt="cine"
               class="d-block img-thumbnail w-70"
             />
@@ -143,7 +130,7 @@
         </p>
       </div>
     </main>
-    <footer class="my-4">
+    <footer class="mt-auto">
       <div class="container-fluid">
         <div
           class="container-fluid d-flex justify-content-around text-decoration-none"
@@ -163,6 +150,21 @@
       </div>
     </footer>
     <!-- <script src="./scripts/tempData.js"></script> -->
-    <script src="./scripts/index.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+      integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+      crossorigin="anonymous"
+    ></script>
+    <script src="../public/bundle.js"></script>
   </body>
 </html>
