--- a/front/pages/sobreMi.html
+++ b/front/pages/sobreMi.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./styles/reset.css" />
+    <link rel="stylesheet" href="../styles/reset.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -29,15 +29,15 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <title>Proyecto Modulo 2</title>
   </head>
-  <body>
+  <body class="d-flex flex-column min-vh-100">
     <header>
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid justify-content-between">
           <div class="ms-3 align-content-center">
-            <img src="./assets/img/Logo.png" alt="" class="" />
+            <img src="../assets/img/Logo.png" alt="" class="" />
             <a
               class="fs-5 fs-bold text-decoration-none text-dark m-1"
-              href="./index.html"
+              href="../index.html"
               >Cinephile</a
             >
             <button
@@ -123,7 +123,7 @@
         </p>
       </div>
     </main>
-    <footer class="my-4">
+    <footer class="mt-auto">
       <div class="container-fluid">
         <div
           class="container-fluid d-flex justify-content-around text-decoration-none"
@@ -143,6 +143,6 @@
       </div>
     </footer>
     <!-- <script src="./scripts/tempData.js"></script> -->
-    <script src="./scripts/index.js"></script>
+    <script src="../public/bundle.js"></script>
   </body>
 </html>
