--- a/front/index.html
+++ b/front/index.html
@@ -125,6 +125,6 @@
       integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
       crossorigin="anonymous"
     ></script>
-    <script src="./public/bundle.js"></script>
+    <script src="./public/index.js"></script>
   </body>
 </html>
