Corrijo validaciones, trato de limpiar un poco el codigo, anado middleware, todo esta corriendo correctamente, el dotenv si sirve pero como ya habia subido los archivo al githb aun se estan mosttrando tendria que eliminarlos por ahora lo dejo asi

--- a/front/pages/agregarPelicula.html
+++ b/front/pages/agregarPelicula.html
@@ -224,7 +224,7 @@
                                 type="checkbox"
                                 value="Romance"
                                 id="Romance"
-                                name="ganre"
+                                name="genre"
                               />
                               <label class="form-check-label" for="Romance"
                                 >Romance</label
